clang/test/BSC/Negative/NullabilityCheck/array_field_init.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s
// --- Negative: partial init errors with -nullability-check=all ---

struct S1 {
  int *_Nonnull p1[2];
  int *_Borrow p2[2];
};

void test1() {
  int a = 1;
  int* p = &a;
  int* _Borrow q = &_Mut a;

  struct S1 s0 = {
    .p1 = {p, p},
    .p2 = {q, q}
  };
  struct S1 s1 = {
    .p1 = {nullptr, nullptr}, // expected-error {{`s1.p1` is a _Nonnull pointer and must be properly initialized.}}
    .p2 = {nullptr, nullptr}  // expected-error {{`s1.p2` is a _Nonnull pointer and must be properly initialized.}}
  };
  struct S1 s2 = {
    .p1 = {p, nullptr}, // expected-error {{`s2.p1` is a _Nonnull pointer and must be properly initialized.}}
    .p2 = {q, nullptr}  // expected-error {{`s2.p2` is a _Nonnull pointer and must be properly initialized.}}
  };
  struct S1 s3 = {
    .p1 = {nullptr, p}, // expected-error {{`s3.p1` is a _Nonnull pointer and must be properly initialized.}}
    .p2 = {nullptr, q}  // expected-error {{`s3.p2` is a _Nonnull pointer and must be properly initialized.}}
  };
  struct S1 s4 = { // expected-error {{`s4` is a _Nonnull pointer and must be properly initialized.}}
    .p1 = {},
    .p2 = {}
  };
}
